--- a/theme/common/header.twig
+++ b/theme/common/header.twig
@@ -33,14 +33,9 @@
             <!-- menu -->
             <ul class="main-menu">
                 <li><a href="/">Главная</a></li>
-                <li>
-                    <a href="#/catalog">Каталог <span class="new">New</span></a>
-                    <ul class="sub-menu">
-                        <li><a href="#/catalog/category">Категория</a></li>
-                    </ul>
-                </li>
+                <li><a href="/catalog">Каталог <span class="new">New</span></a></li>
                 <li><a href="/blog">Блог</a></li>
-                <li><a href="#/guestbook">Гостевая книга</a></li>
+                <li><a href="/guestbook">Гостевая книга</a></li>
                 <li><a href="/delivery">Доставка</a></li>
                 <li><a href="/about">О нас</a></li>
                 <li><a href="/contacts">Контакты</a></li>
