--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -102,7 +102,7 @@
                                     'type': 'text',
                                     'name': 'pagination',
                                     'args': {
-                                        'value': item.pagination,
+                                        'value': item.pagination is not empty ? item.pagination : (params.catalog_category_pagination ?? '10'),
                                     }
                                 } %}
                             </div>
@@ -267,7 +267,7 @@
                                     'name': 'template[category]',
                                     'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="Укажите название шаблона, который хотите использовать для данной категории или оставьте <b>catalog.category.twig</b>"></i>',
                                     'args': {
-                                        'value': item.template.category is not empty ? item.template.category : 'catalog.category.twig',
+                                        'value': item.template.category is not empty ? item.template.category : (params.catalog_category_template ?? 'catalog.category.twig'),
                                         'required': true,
                                     }
                                 } %}
