--- a/theme/catalog.product.twig
+++ b/theme/catalog.product.twig
@@ -4,8 +4,8 @@
 
 {% block head %}
     {{ parent() }}
-    <meta name="description" content="{{ page.meta.description }}">
-    <meta name="keywords" content="{{ page.meta.keywords }}">
+    <meta name="description" content="{{ product.meta.description }}">
+    <meta name="keywords" content="{{ product.meta.keywords }}">
 {% endblock %}
 
 {% block page %}
