--- a/theme/catalog.category.twig
+++ b/theme/catalog.category.twig
@@ -4,8 +4,8 @@
 
 {% block head %}
     {{ parent() }}
-    <meta name="description" content="{{ page.meta.description }}">
-    <meta name="keywords" content="{{ page.meta.keywords }}">
+    <meta name="description" content="{{ category.meta.description }}">
+    <meta name="keywords" content="{{ category.meta.keywords }}">
 {% endblock %}
 
 {% block page %}
