--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -26,9 +26,9 @@
                                 {% include 'cup/form.twig' with {
                                     'label': 'Логин',
                                     'type': 'text',
-                                    'name': 'username',
+                                    'name': 'name',
                                     'args': {
-                                        'placeholder': 'pushkin'
+                                        'placeholder': 'Pushkin'
                                     }
                                 } %}
 
