--- a/src/Template/cup/guestbook/index.twig
+++ b/src/Template/cup/guestbook/index.twig
@@ -25,7 +25,8 @@
                         <table data-table class="display table table-striped table-hover" >
                             <thead>
                                 <tr>
-                                    <th>Логин</th>
+                                    <th width="15%">Имя</th>
+                                    <th>Сообщение</th>
                                     <th width="15%">Дата создания</th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
@@ -34,7 +35,20 @@
                                 {% for item in list %}
                                     <tr>
                                         <td>
-                                            {{ item.message }}
+                                            {% if item.status == 'moderate' %}
+                                                <span class="badge badge-secondary">New</span>
+                                            {% endif %}
+
+                                            {{ item.name }}
+
+                                            {% if item.email %}
+                                                <a href="mailto:{{ item.email }}" class="text-black-50 float-right">
+                                                    <i class="fa fa-envelope"></i>
+                                                </a>
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            <code>{{ item.message|truncate(250) }}</code>
                                         </td>
                                         <td>{{ item.date|date('d.m.Y H:i:s') }}</td>
                                         <td class="text-center">
