--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -59,6 +59,11 @@
                                 </a>
                             </li>
                             <li class="nav-item submenu">
+                                <a class="nav-link" data-toggle="pill" href="#guestbook" role="tab">
+                                    Гостевая книга
+                                </a>
+                            </li>
+                            <li class="nav-item submenu">
                                 <a class="nav-link" data-toggle="pill" href="#catalog" role="tab">
                                     Каталог
                                 </a>
@@ -311,13 +316,47 @@
                             {# TAB: Publication #}
                             <div class="tab-pane fade" id="publication" role="tabpanel">
                                 {% include 'cup/field.twig' with {
-                                    'label': 'Формат времени для публикации',
+                                    'label': 'Формат времени',
                                     'description': '',
                                     'type': 'text',
                                     'name': 'publication[date_format]',
                                     'args': {
                                         'placeholder': 'j-m-Y, H:i',
                                         'value': 'j-m-Y, H:i'
+                                    }
+                                } %}
+                            </div>
+
+                            {# TAB: Guestbook #}
+                            <div class="tab-pane fade" id="guestbook" role="tabpanel">
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Формат времени',
+                                    'description': '',
+                                    'type': 'text',
+                                    'name': 'guestbook[date_format]',
+                                    'args': {
+                                        'placeholder': 'j-m-Y, H:i',
+                                        'value': 'j-m-Y, H:i'
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Шаблон раздела',
+                                    'type': 'text',
+                                    'name': 'guestbook[template]',
+                                    'args': {
+                                        'placeholder': 'guestbook.twig',
+                                        'value': 'guestbook.twig'
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Количество товаров на страницу',
+                                    'type': 'number',
+                                    'name': 'guestbook[pagination]',
+                                    'args': {
+                                        'placeholder': '10',
+                                        'value': '10'
                                     }
                                 } %}
                             </div>
