--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -86,6 +86,13 @@
     </li>
 
     <li class="nav-item">
+        <a href="/cup/file">
+            <i class="fas fa-file"></i>
+            <p>Файлы</p>
+        </a>
+    </li>
+
+    <li class="nav-item">
         <a href="/cup/parameters">
             <i class="fas fa-cog"></i>
             <p>Настройки</p>
