--- a/theme/publication.list.twig
+++ b/theme/publication.list.twig
@@ -38,7 +38,7 @@
 
                 <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                     {% for item in publications %}
-                        {% include category.template.short with {'category': category, 'item': item} %}
+                        {% include category.template.short with {'categories': categories, 'category': category, 'item': item} only %}
                     {% endfor %}
                 </div>
             </div>
