--- a/theme/publication.short.twig
+++ b/theme/publication.short.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <article class="publication" data-uuid="{{ item.uuid }}">
-        <h2><a href="/{{ category.address }}/{{ item.address }}">{{ item.title }}</a></h2>
+        <h2><a href="/{{ categories.firstWhere('uuid', item.category).address }}/{{ item.address }}">{{ item.title }}</a></h2>
         <div>
             <ul class="meta">
                 <li>{{ item.date|date(parameter.where('key', 'publication_date_format').first().value) }}</li>
