--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -69,7 +69,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-3">
                                 {% include 'cup/form.twig' with {
                                     'label': 'Основная категория',
                                     'type': 'select',
@@ -77,6 +77,17 @@
                                     'args': {
                                         'option': {'00000000-0000-0000-0000-000000000000': '---'}|merge(list.whereNotIn('uuid', [item.uuid]).pluck('title', 'uuid').all()),
                                         'selected': item.parent
+                                    }
+                                } %}
+                            </div>
+                            <div class="col-md-3">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'Показывать вложенные категории',
+                                    'type': 'select',
+                                    'name': 'children',
+                                    'args': {
+                                        'option': {'yes':'Да', 'no':'Нет'},
+                                        'selected': item.children ? 'yes' : 'no'
                                     }
                                 } %}
                             </div>
