--- a/theme/catalog.category.twig
+++ b/theme/catalog.category.twig
@@ -26,7 +26,7 @@
                     <div class="filter-widget">
                         <h2 class="fw-title">Категории</h2>
                         <ul class="category-menu">
-                            {% include 'catalog.category.menu.twig' with {'categories':categories,'parent':'null'} only %}
+                            {% include 'catalog.category.menu.twig' with {'categories':categories} only %}
                         </ul>
                     </div>
                     {#<div class="filter-widget mb-0">
