--- a/theme/publication.list.twig
+++ b/theme/publication.list.twig
@@ -38,7 +38,7 @@
 
                 <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                     {% for item in publications %}
-                        {% include category.template.short with {'categories': categories, 'item': item} only %}
+                        {% include category.template.short with {'categories': categories, 'item': item, 'date_format': date_format} only %}
                     {% endfor %}
                 </div>
             </div>
