--- a/theme/publication.short.twig
+++ b/theme/publication.short.twig
@@ -4,7 +4,7 @@
         <h2><a href="/{{ category.address }}/{{ item.address }}">{{ item.title }}</a></h2>
         <div>
             <ul class="meta">
-                <li>{{ item.date|date(parameter.where('key', 'publication_date_format').first().value) }}</li>
+                <li>{{ item.date|date(date_format) }}</li>
                 <li><a href="{{ category.address }}">{{ category.title }}</a></li>
             </ul>
         </div>
