--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -27,8 +27,10 @@
                                     'label': 'Имя',
                                     'type': 'text',
                                     'name': 'name',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Нельзя изменять значение поля"></i>',
                                     'args': {
                                         'value': item.name,
+                                        'readonly': true
                                     }
                                 } %}
                             </div>
@@ -37,8 +39,10 @@
                                     'label': 'E-Mail',
                                     'type': 'email',
                                     'name': 'email',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Нельзя изменять значение поля"></i>',
                                     'args': {
                                         'value': item.email,
+                                        'readonly': true
                                     }
                                 } %}
                             </div>
@@ -83,9 +87,10 @@
                                     'label': 'Дата',
                                     'type': 'datetime',
                                     'name': 'date',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Нельзя изменять значение поля"></i>',
                                     'args': {
                                         'value': item.date|date('d.m.Y H:i:s'),
-                                        'placeholder': '20.01.2019 12:34:01',
+                                        'readonly': true
                                     }
                                 } %}
                             </div>
