fix product form

--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -245,6 +245,7 @@
                                     'label': 'Изображения',
                                     'type': 'file',
                                     'name': 'files[]',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Здесь можно выбрать несколько изображений"></i>',
                                     'args': {
                                         'class': ['d-block', 'btn', 'btn-sm', 'bg-grey2'],
                                         'multiple': true,
